<resources>
    <string name="app_name">TrueNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_feed">Feed</string>
    <string name="str_chatbot">ChatBot</string>
    <string name="str_preferences">Preferences</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_contact_us">Contact Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_read_more">Read More</string>
    <string name="str_signUp">Sign Up</string>
    <string name="str_name">Name</string>
    <string name="str_mobile">Mobile Number</string>
    <string name="str_email">Email ID</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_pass">Password</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_login">Login</string>
    <string name="signUp_underline">Sign Up here</string>
</resources>
